# duckdb_vss

./: .gitignore
embedded-c++/: CMakeLists.txt  Makefile  benchmark_idx_creation.cpp  benchmark_memory.cpp  benchmark_search.cpp  bm_clustering_all_20c.json  bm_clustering_all_c20.txt  bm_clustering_all_ef_s.json  bm_clustering_all_ef_s.txt  bm_clustering_idx_creation.json  bm_clustering_idx_creation.txt  bm_clustering_idx_creation_time_clob.json  bm_clustering_idx_search_controlled.json  bm_clustering_idx_search_controlled.txt  bm_clustering_idx_search_random.json  bm_clustering_idx_search_random.txt  bm_clustering_search_5-20c.json  bm_clustering_search_time_clob.json  bm_fashion_mnist_5-15c.json  bm_fashion_mnist_5-15c.txt  bm_gist_5-20c.json  bm_gist_5-20c.txt  bm_mnist_5-15c.json  bm_mnist_5-15c.txt  bm_sift_5-15c.json  bm_sift_5-15c.txt  bm_vss_all.json  bm_vss_all.txt  bm_vss_idx_creation_time.json  bm_vss_search_time.json  bm_vss_search_time_clob.json  bm_vss_search_time_notoptimized.json  clustered_vss_benchmarks.json  clustered_vss_benchmarks.txt  clustered_vss_benchmarks_random_queries.json  clustered_vss_benchmarks_random_queries.txt  clustering_create_tasks_stats_by_cluster.json  clustering_create_tasks_stats_by_dataset.json  clustering_memory_measures.json  clustering_time_operations_index_bm.json  (+13 more)
embedded-c++/clustering_benchmarks/: bm_clustering_idx-creation_time.json  clustering_memory_measures.json  clustering_scan_tasks_stats_by_cluster.json  clustering_scan_tasks_stats_by_dataset.json  clustering_time_operations_search_bm.json
(+8 files in other folders)
